Fixed textbox labels

--- a/Chair/CustomerUI.html
+++ b/Chair/CustomerUI.html
@@ -27,26 +27,26 @@
   <label for="a_th">Apron Thickness:</label>
   <input type="text" id="a_th" name="a_th"> cm<br><br>
 
-  <label for="arm_support"> Arm support:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <input type="checkbox" id="arm_support" name="arm_support" value="with_arm">
+  <label for="with_arm"> Arm support:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type="checkbox" id="with_arm" name="with_arm" value="1">
 
 
 <h2 style="font-family:verdana">BACK FEATURES </h2>
 
-  <label for="back_check">Back:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <input type="checkbox" id="back_check" name="back_check" value="with_back">
+  <label for="with_back">Back:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type="checkbox" id="with_back" name="with_back" value="1">
   <input type="text" id="back_height" name="back_height"> cm<br><br>
 
-  <label for="trail_check">Top Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <input type="checkbox" id="trail_check" name="trail_check" value="with_trail">
+  <label for="with_top">Top Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type="checkbox" id="with_top" name="with_top" value="1">
   <input type="text" id="trail_width" name="trail_width"> cm<br><br>
 
-  <label for="mrail_check">Mid Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <input type="checkbox" id="mrail_check" name="mrail_check" value="with_mrail">
+  <label for="with_mid">Mid Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type="checkbox" id="with_mid" name="with_mid" value="1l">
   <input type="text" id="mrail_width" name="mrail_width"> cm<br><br>
 
-  <label for="brail_check">Bottom Rail:&nbsp;</label>
-  <input type="checkbox" id="brail_check" name="brail_check" value="with_brail">
+  <label for="with_bot">Bottom Rail:&nbsp;</label>
+  <input type="checkbox" id="with_bot" name="with_bot" value="1">
   <input type="text" id="brail_width" name="brail_width"> cm <br><br>
   
 
@@ -55,11 +55,11 @@
   <label for="leg_height">Height: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </label>
   <input type="text" id="leg_height" name="leg_height"> cm<br><br>
 
-  <label for="top_th">Thickness:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <label for="leg_th">Thickness:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <input type="text" id="top_th" name="top_th" > cm<br><br>
  
-  <label for="tapered_check">Tapered:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <input type="checkbox" id="tapered_check" name="tapered_check" value="with_taper"><br><br>
+  <label for="with_taper">Tapered:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type="checkbox" id="with_taper" name="with_taper" value="1"><br><br>
 
   Spindles: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   
