labels match owl

--- a/Chair/CustomerUI.html
+++ b/Chair/CustomerUI.html
@@ -39,15 +39,15 @@
 
   <label for="with_top">Top Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <input type="checkbox" id="with_top" name="with_top" value="1">
-  <input type="text" id="trail_width" name="trail_width"> cm<br><br>
+  <input type="text" id="top_th" name="top_th"> cm<br><br>
 
   <label for="with_mid">Mid Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <input type="checkbox" id="with_mid" name="with_mid" value="1l">
-  <input type="text" id="mrail_width" name="mrail_width"> cm<br><br>
+  <input type="text" id="mid_th" name="mid_th"> cm<br><br>
 
   <label for="with_bot">Bottom Rail:&nbsp;</label>
   <input type="checkbox" id="with_bot" name="with_bot" value="1">
-  <input type="text" id="brail_width" name="brail_width"> cm <br><br>
+  <input type="text" id="bot_th" name="bot_th"> cm <br><br>
   
 
   <h2 style="font-family:verdana">LEG FEATURES</h2>
@@ -56,7 +56,7 @@
   <input type="text" id="leg_height" name="leg_height"> cm<br><br>
 
   <label for="leg_th">Thickness:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <input type="text" id="top_th" name="top_th" > cm<br><br>
+  <input type="text" id="leg_th" name="leg_th" > cm<br><br>
  
   <label for="with_taper">Tapered:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <input type="checkbox" id="with_taper" name="with_taper" value="1"><br><br>
@@ -92,8 +92,8 @@
 
         <h2 style="font-family:verdana">CUSTOMER INFORMATION</h2>
     
-        <label for="fname">Full Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-        <input type="text" class = "textbox" id="fname" name="fname"> <br><br>
+        <label for="name">Full Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+        <input type="text" class = "textbox" id="name" name="name"> <br><br>
 
         <label for="email">E-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
         <input type="text" class = "textbox" id="email" name="email"> <br><br>
