fixed small typo

--- a/Chair/CustomerUI.html
+++ b/Chair/CustomerUI.html
@@ -42,7 +42,7 @@
   <input type="text" id="top_th" name="top_th"> cm<br><br>
 
   <label for="with_mid">Mid Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <input type="checkbox" id="with_mid" name="with_mid" value="1l">
+  <input type="checkbox" id="with_mid" name="with_mid" value="1">
   <input type="text" id="mid_th" name="mid_th"> cm<br><br>
 
   <label for="with_bot">Bottom Rail:&nbsp;</label>
