--- a/Chair/CustomerUI.html
+++ b/Chair/CustomerUI.html
@@ -28,24 +28,29 @@
   <input type="text" id="a_th" name="a_th"> cm<br><br>
 
   <label for="with_arm"> Arm support:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type='hidden' value='0' name='with_arm'>
   <input type="checkbox" id="with_arm" name="with_arm" value="1">
 
 
 <h2 style="font-family:verdana">BACK FEATURES </h2>
 
   <label for="with_back">Back:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type='hidden' value='0' name='with_back'>
   <input type="checkbox" id="with_back" name="with_back" value="1">
   <input type="text" id="back_height" name="back_height"> cm<br><br>
 
   <label for="with_top">Top Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type='hidden' value='0' name='with_top'>
   <input type="checkbox" id="with_top" name="with_top" value="1">
   <input type="text" id="top_th" name="top_th"> cm<br><br>
 
   <label for="with_mid">Mid Rail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type='hidden' value='0' name='with_mid'>
   <input type="checkbox" id="with_mid" name="with_mid" value="1">
   <input type="text" id="mid_th" name="mid_th"> cm<br><br>
 
   <label for="with_bot">Bottom Rail:&nbsp;</label>
+  <input type='hidden' value='0' name='with_bot'>
   <input type="checkbox" id="with_bot" name="with_bot" value="1">
   <input type="text" id="bot_th" name="bot_th"> cm <br><br>
   
@@ -59,6 +64,7 @@
   <input type="text" id="leg_th" name="leg_th" > cm<br><br>
  
   <label for="with_taper">Tapered:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <input type='hidden' value='0' name='with_taper'>
   <input type="checkbox" id="with_taper" name="with_taper" value="1"><br><br>
 
   Spindles: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
