fixed table layout

--- a/Chair/factory_overview.html
+++ b/Chair/factory_overview.html
@@ -19,15 +19,10 @@
 <table style="width:100%">
     <tr>
       <th>Order name</th>
-      <th>Seat</th> 
-      <th>Legs</th> 
-      <th>Apron</th>
-      <th>Back</th> 
-      <th>Top rail</th>
-      <th>Mid rail</th>
-      <th>Bottom rail</th>
-      <th>Spindles</th>
+      <th>Buyer name</th> 
+      <th>Email</th>
       <th>Quantity</th>
+      <th>Status</th>
     </tr>
     <p> No orders yet </p>
   </table>
@@ -35,3 +30,4 @@
 
 </body>
 </html>
+
