--- a/Chair/order_complete.html
+++ b/Chair/order_complete.html
@@ -13,8 +13,9 @@
 <body style="background-color: #ecf2f3;">
 
 
-<h2>Thank you for your order! </h2> <br>
-<h3>We are very busy right now, but we aim to deliver your chair in xxx days.</h3>
+MESSAGE
+
+
 
 </body>
 </html>
