added explenation to back ticks

--- a/Chair/CustomerUI.html
+++ b/Chair/CustomerUI.html
@@ -32,7 +32,7 @@
   <input type="checkbox" id="with_arm" name="with_arm" value="1">
 
 
-<h2 style="font-family:verdana">BACK FEATURES </h2>
+<h2 style="font-family:verdana">BACK FEATURES (Unticked = not chosen) </h2>
 
   <label for="with_back">Back height:&nbsp;&nbsp;&nbsp;</label>
   <input type='hidden' value='0' name='with_back'>
