added explenation for customer

--- a/Chair/CustomerUI.html
+++ b/Chair/CustomerUI.html
@@ -17,14 +17,14 @@
 
 <div style="float:left;">
 <form action="/product_info.php" method="get">
-    <h2 style="font-family:verdana">SEAT FEATURES</h2>
-  <label for="s_width">Seat width:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+    <h2 style="font-family:verdana">SEAT FEATURES (* = must be chosen)</h2>
+  <label for="s_width">*Seat width:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <input type="text" class = "textbox" id="s_width" name="s_width"> cm<br><br>
 
-  <label for="s_depth">Seat depth:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <label for="s_depth">*Seat depth:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <input type="text" id="s_depth" name="s_depth"> cm<br><br>
 
-  <label for="a_th">Apron Thickness:</label>
+  <label for="a_th">*Apron Thickness:</label>
   <input type="text" id="a_th" name="a_th"> cm<br><br>
 
   <label for="with_arm"> Arm support:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
@@ -55,12 +55,12 @@
   <input type="text" id="bot_th" name="bot_th" placeholder="Enter thickness"> cm <br><br>
   
 
-  <h2 style="font-family:verdana">LEG FEATURES</h2>
+  <h2 style="font-family:verdana">LEG FEATURES (* = must be chosen)</h2>
 
-  <label for="leg_height">Height: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </label>
+  <label for="leg_height">*Height: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </label>
   <input type="text" id="leg_height" name="leg_height"> cm<br><br>
 
-  <label for="leg_th">Thickness:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+  <label for="leg_th">*Thickness:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <input type="text" id="leg_th" name="leg_th" > cm<br><br>
  
   <label for="with_taper">Tapered:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
