--- a/Welding/UI/results.html
+++ b/Welding/UI/results.html
@@ -57,7 +57,7 @@
     <hr>
     Provide contact information to receive a copy by email.
 
-<form id=get_results action="/get_results.php" method="get">  
+<form id=get_results action="/get_results.php" method="POST">  
   <label for="cust_name"><b>Name</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><br>
   <input type="text" class = "textbox" id="cust_name" name="cust_name">  <br><br>
 
@@ -78,7 +78,7 @@
 <div style="float:right;">
     
     <img src="../img/thin-line.jpg" width ="320" height = "320" alt="Results" class="center"><br>
-    <img src="colors.png" width ="350" height = "125" alt="color_legend" class="center"><br>
+    <img src="UI/colors.png" width ="350" height = "125" alt="color_legend" class="center"><br>
     
     <button class="btn" style="width:100%"><i class="fa fa-download"></i> Download</button>
 
