fixed wall_height name

--- a/Welding/UI/home.html
+++ b/Welding/UI/home.html
@@ -46,7 +46,7 @@
   <input type="text" id="y_scale" name="y_scale"> <b>[m]</b><br><br>
 
   <label for="wall_height"><b>Wall Height</b></label><br>
-  <input type="text" id="a_th" name="a_th"> <b>[m]</b><br><br>
+  <input type="text" id="wall_height" name="wall_height"> <b>[m]</b><br><br>
 
   <hr><br><br>
   <h2>Robot Arm Dimensions</h2>
