--- a/Nodes/UI/customer_params.html
+++ b/Nodes/UI/customer_params.html
@@ -44,7 +44,7 @@
     <hr>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-  Max [kN] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Min [kN] <br>
+  Max [N] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Min [N] <br>
 
   <label for="N_max"><b>Axial force (N) </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <input type="text" id="N_max" name="N_max"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" id="N_min" name="N_min">  <br><br>
@@ -56,7 +56,7 @@
 
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-  Max [kNcm] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Min [kNcm] <br>
+  Max [Nm] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Min [Nm] <br>
 
 
   <label for="M_max"><b>Bending moment (M) </b>&nbsp;&nbsp;&nbsp;</label>
